[DDW-680] Fix color of 'x' icon and scrollbar in update overlay and cardano node status

--- a/source/renderer/app/components/appUpdate/AppUpdateOverlay.scss
+++ b/source/renderer/app/components/appUpdate/AppUpdateOverlay.scss
@@ -239,7 +239,9 @@
     top: 10px;
     width: 44px;
     z-index: 999;
-
+    polygon {
+      fill: var(--theme-news-overlay-update-button-text-color);
+    }
     &:hover {
       background-color: var(
         --theme-news-overlay-update-content-background-color
