--- a/source/renderer/app/components/status/DaedalusDiagnostics.scss
+++ b/source/renderer/app/components/status/DaedalusDiagnostics.scss
@@ -387,3 +387,12 @@
     width: 36px;
   }
 }
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--theme-splash-network-scrollbar-thumb-background);
+  &:hover {
+    background-color: var(
+      --theme-splash-network-scrollbar-thumb-background-hover
+    );
+  }
+}
